Fixed the links for tabs

--- a/web/index.html
+++ b/web/index.html
@@ -152,9 +152,9 @@
             <button class="navbar-link" data-nav-link>Behance</button>
           </li> -->
 
-          <li class="navbar-item">
+          <!-- <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contato</button>
-          </li>
+          </li> -->
 
         </ul>
 
@@ -162,7 +162,7 @@
 
       <!--ABOUT-->
 
-      <article class="about  active" data-page="about">
+      <article class="about  active" data-page="sobre">
 
         <header>
           <h2 class="h2 article-title"><span>Sobre mim</span></h2>
@@ -355,7 +355,7 @@
 
       <!--RESUME-->
 
-      <article class="resume" data-page="resume">
+      <article class="resume" data-page="curriculo">
 
         <header>
           <h2 class="h2 article-title"><span>Curriculo</span></h2>
@@ -607,7 +607,7 @@
 
       <!---#PORTFOLIO--->
 
-      <article class="projects" data-page="projects">
+      <article class="projects" data-page="projetos">
 
         <header>
           <h2 class="h2 article-title"><span>Portfolio</span></h2>
@@ -901,7 +901,7 @@
         - #CONTACT
       -->
 <!-- 
-      <article class="contact" data-page="contact">
+      <article class="contact" data-page="Contato">
 
         <header>
           <h2 class="h2 article-title"><span>Contact</span></h2>
