Index - projects updated

--- a/web/index.html
+++ b/web/index.html
@@ -672,14 +672,14 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://github.com/goodguyplayer/portfolio-nathan">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.png" alt="finance" loading="lazy">
+                  <img src="./assets/images/webpage.png" alt="webpage" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Portfolio</h3>
@@ -690,14 +690,14 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="Softwares">
-              <a href="#">
+              <a href="https://github.com/goodguyplayer/Cobol-B3-Data-Merger">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/cobol.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/cobol.png" alt="cobol" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Combinador de Dados B3</h3>
@@ -715,7 +715,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Calculator_theme.png" alt="fundo" loading="lazy">
+                  <img src="./assets/images/Calculator_theme.png" alt="calculator" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Calculadora Web</h3>
@@ -733,7 +733,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Jupyter_logo.svg.png" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/Jupyter_logo.svg.png" alt="jupyter" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">IA - Filtro de DDoS - POC</h3>
@@ -751,7 +751,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/deySnG.png" alt="dsm." loading="lazy">
+                  <img src="./assets/images/deySnG.png" alt="gwj" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Game Jam (GWJ#69)</h3>
